--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=TodoAPI
 spring.datasource.url=jdbc:h2:mem:todoappdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=ram
 spring.datasource.platform=h2
 
 # Hibernate Configuration
